@@ -272,6 +272,9 @@ Trunk (unreleased changes)
     HADOOP-7465. A several tiny improvements for the LOG format.
     (Xie Xianshan via eli)
 
+    HADOOP-7434. Display error when using "daemonlog -setlevel" with
+    illegal level. (yanjinshuang via eli)
+
   OPTIMIZATIONS
   
     HADOOP-7333. Performance improvement in PureJavaCrc32. (Eric Caspole
